--- a/index.html
+++ b/index.html
@@ -14,13 +14,24 @@
             <a href="#!" class="logo">Kelvin</a>
             <nav class="nav">
                 <ul class="nav-list">
-                <li class="nav-item"><a href="#!" class="nav-link active">Home</a></li>
-                <li class="nav-item"><a href="#!" class="nav-link">Works</a></li>
-                <li class="nav-item"><a href="#!" class="nav-link">Services</a></li>
-                <li class="nav-item"><a href="#!" class="nav-link">About</a></li>
-                <li class="nav-item"><a href="#!" class="nav-link">Contact</a></li>
+                    <li class="nav-item"><a href="#!" class="nav-link active">Home</a></li>
+                    <li class="nav-item"><a href="#!" class="nav-link">Works</a></li>
+                    <li class="nav-item"><a href="#!" class="nav-link">Services</a></li>
+                    <li class="nav-item"><a href="#!" class="nav-link">About</a></li>
+                    <li class="nav-item"><a href="#!" class="nav-link">Contact</a></li>
                 </ul>
             </nav>
+        </div>
+
+        <div class="header-row">
+            <div class="header-content">
+                <h1 class="header-heading">Kelvin Kramer <br> Designer & Developer</h1>
+                <p>I’m a portrait, fashion and lifestyle photographer living In New York City. During my thirteen year
+                    tenure here.</p>
+            </div>
+            <div class="header-img">
+                <img src="img/hero.png" alt="">
+            </div>
         </div>
     </div>
 </header>
