--- a/index.html
+++ b/index.html
@@ -35,6 +35,30 @@
         </div>
     </div>
 </header>
+<section class="services">
+    <div class="container">
+        <div class="services-row">
+            <div class="service-card">
+                <img class="service-card-img" src="img/graphic.svg" alt="UI/UX Design">
+                <h3 class="service-card-title">UI/UX Design</h3>
+                <p>Our design is translated into comprehensive digital environments built on latest development
+                    standards.</p>
+            </div>
+            <div class="service-card">
+                <img class="service-card-img" src="img/startup.svg" alt="Development">
+                <h3 class="service-card-title">Development</h3>
+                <p>Our design is translated into comprehensive digital environments built on latest development
+                    standards.</p>
+            </div>
+            <div class="service-card">
+                <img class="service-card-img" src="img/browser.svg" alt="UI/UX Design">
+                <h3 class="service-card-title">UI/UX Design</h3>
+                <p>Our design is translated into comprehensive digital environments built on latest development
+                    standards.</p>
+            </div>
+        </div>
+    </div>
+</section>
 
 <script src="js/main.js"></script>
 
