--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         </div>
     </div>
 </header>
+
 <section class="services">
     <div class="container">
         <div class="services-row">
@@ -57,6 +58,30 @@
                     standards.</p>
             </div>
         </div>
+    </div>
+</section>
+
+<section class="portfolio">
+    <div class="container">
+        <div class="portfolio-title">
+            <h2 class="title-1">Portfolio</h2>
+        </div>
+
+        <div class="project">
+            <img src="img/portofolio/portofolio1.jpg" alt="" class="project-img">
+            <h3 class="project-title"><a href="#!">Online fashion store - Homepage</a></h3>
+        </div>
+
+        <div class="project">
+            <img src="img/portofolio/portofolio2.jpg" alt="" class="project-img">
+            <h3 class="project-title"><a href="#!">Reebok Store - Concept</a></h3>
+        </div>
+
+        <div class="project">
+            <img src="img/portofolio/portofolio3.jpg" alt="" class="project-img">
+            <h3 class="project-title"><a href="#!">Braun Landing Page - Concept</a></h3>
+        </div>
+
     </div>
 </section>
 
