--- a/index.html
+++ b/index.html
@@ -28,12 +28,16 @@
 
         <div class="header-row">
             <div class="header-content">
-                <h1 class="header-heading">Kelvin Kramer <br> Designer & Developer</h1>
+                <h1 class="header-heading">Kelvin Kramer <br><span>Designer & Developer</span></h1>
                 <p>I’m a portrait, fashion and lifestyle photographer living In New York City. During my thirteen year
                     tenure here.</p>
             </div>
+
             <div class="header-img">
-                <img src="img/hero.png" alt="">
+                <picture>
+                    <source media="(max-width: 799px)" srcset="img/hero-mobile.png">
+                    <img src="img/hero.png" alt="">
+                </picture>
             </div>
         </div>
     </div>
