--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>Portofolio</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/media.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css"
+          integrity="sha512-1cK78a1o+ht2JcaW6g8OXYwqpev9+6GqOkz9xmBN9iUUhIndKtxwILGWYOSibOKjLsEdjyjZvYDq/cZwNeak0w=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
 </head>
 <body>
 
@@ -27,13 +30,13 @@
         </div>
 
         <div class="header-row">
-            <div class="header-content">
+            <div class="header-content" data-aos="fade-up">
                 <h1 class="header-heading">Kelvin Kramer <br><span>Designer & Developer</span></h1>
                 <p>I’m a portrait, fashion and lifestyle photographer living In New York City. During my thirteen year
                     tenure here.</p>
             </div>
 
-            <div class="header-img">
+            <div class="header-img" data-aos="fade-left">
                 <picture>
                     <source media="(max-width: 799px)" srcset="img/hero-mobile.png">
                     <img src="img/hero.png" alt="">
@@ -46,19 +49,19 @@
 <section class="services">
     <div class="container">
         <div class="services-row">
-            <div class="service-card">
+            <div class="service-card" data-aos="fade-down">
                 <img class="service-card-img" src="img/graphic.svg" alt="UI/UX Design">
                 <h3 class="service-card-title">UI/UX Design</h3>
                 <p>Our design is translated into comprehensive digital environments built on latest development
                     standards.</p>
             </div>
-            <div class="service-card">
+            <div class="service-card" data-aos="fade-down">
                 <img class="service-card-img" src="img/startup.svg" alt="Development">
                 <h3 class="service-card-title">Development</h3>
                 <p>Our design is translated into comprehensive digital environments built on latest development
                     standards.</p>
             </div>
-            <div class="service-card">
+            <div class="service-card" data-aos="fade-down">
                 <img class="service-card-img" src="img/browser.svg" alt="UI/UX Design">
                 <h3 class="service-card-title">UI/UX Design</h3>
                 <p>Our design is translated into comprehensive digital environments built on latest development
@@ -74,17 +77,17 @@
             <h2 class="title-1">Portfolio</h2>
         </div>
 
-        <div class="project">
+        <div class="project" data-aos="flip-up">
             <img src="img/portofolio/portofolio1.jpg" alt="" class="project-img">
             <h3 class="project-title"><a href="#!">Online fashion store - Homepage</a></h3>
         </div>
 
-        <div class="project">
+        <div class="project" data-aos="flip-up">
             <img src="img/portofolio/portofolio2.jpg" alt="" class="project-img">
             <h3 class="project-title"><a href="#!">Reebok Store - Concept</a></h3>
         </div>
 
-        <div class="project">
+        <div class="project" data-aos="flip-up">
             <img src="img/portofolio/portofolio3.jpg" alt="" class="project-img">
             <h3 class="project-title"><a href="#!">Braun Landing Page - Concept</a></h3>
         </div>
@@ -97,24 +100,27 @@
         <div class="contacts-title">
             <h2 class="title-1">Contacts</h2>
         </div>
-        <div class="contacts-content">
+        <div class="contacts-content" data-aos="fade-down">
             <p>Want to know more or just chat? <br> You are welcome!</p>
         </div>
-        <div class="contacts-button">
+        <div class="contacts-button" data-aos="fade-down">
             <a href="#!" class="btn">Send message</a>
         </div>
-        <div class="contacts-social">
+        <div class="contacts-social" data-aos="zoom-in">
             <a href="#!"><img src="img/logo/LinkedIn.svg" alt="LinkedIn"></a>
             <a href="#!"><img src="img/logo/Instagram.svg" alt="Instagram"></a>
             <a href="#!"><img src="img/logo/Behance.svg" alt="Behance"></a>
             <a href="#!"><img src="img/logo/Dribble.svg" alt="Dribble"></a>
         </div>
-        <div class="contacts-footer">
+        <div class="contacts-footer" data-aos="fade-up">
             <p>Like me on <br> LinkedIn, Instagram, Behance, Dribble</p>
         </div>
     </div>
 </footer>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"
+        integrity="sha512-A7AYk1fGKX6S2SsHywmPkrnzTZHrgiVT7GcQkLGDe2ev0aWb8zejytzS8wjo7PGEXKqJOrjQ4oORtnimIRZBtw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="js/main.js"></script>
 
 </body>
